# django-migrate-middleware

./: .env.example  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
