[tool.pdm.build]
includes = ["django_migrate_middleware"]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[project]
name = "django-migrate-middleware"
version = "0.0.2"
description = "Run migrations on every request"
authors = [
    {name = "lukewiwa", email = "luke.wiwa@gmail.com"}
]
dependencies = [
    "Django>=3.2.16",
]
requires-python = ">=3.7,<4.0"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Django"
]

[project.urls]
"Homepage" = "https://github.com/lukewiwa/django-migrate-middleware"
